--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "stripe": "^8.222.0"
+    "stripe": "^8.222.0",
+    "uuid": "^10.0.0"
   }
 }
